<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/botonSensores"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botonAcceso"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:gravity="left|center_vertical"
        android:text="@string/sensores"
        android:textColor="@color/boton_oscuro"
        android:textSize="24sp" />

    <Button
        android:id="@+id/botonAcceso"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botonCamara"
        android:layout_below="@+id/botonSensores"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:gravity="left|center_vertical"
        android:text="@string/acceso"
        android:textColor="@color/boton_oscuro"
        android:textSize="24sp" />

    <Button
        android:id="@+id/botonCamara"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnHistorial"
        android:layout_below="@+id/botonAcceso"
        android:layout_marginTop="22dp"
        android:background="@android:color/transparent"
        android:gravity="left|center_vertical"
        android:text="@string/camara"
        android:textColor="@color/boton_oscuro"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnHistorial"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botonConf"
        android:layout_below="@+id/botonCamara"
        android:layout_marginTop="19dp"
        android:background="@android:color/transparent"
        android:gravity="left|center_vertical"
        android:text="@string/botonHistorico"
        android:textColor="@color/boton_oscuro"
        android:textSize="24sp" />

    <Button
        android:id="@+id/botonConf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHistorial"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:gravity="left|center_vertical"
        android:text="@string/configuracion"
        android:textColor="@color/boton_oscuro"
        android:textSize="24sp" />

    <Button
        android:id="@+id/botonAyuda"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botonConf"
        android:layout_below="@+id/botonConf"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:gravity="left|center_vertical"
        android:text="@string/ayuda"
        android:textColor="@color/boton_oscuro"
        android:textSize="24sp" />

</RelativeLayout>