<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AyudaArduitoActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/ayuda_title_arduito"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/boton_oscuro"
        android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="24dp"
            android:text="@string/ayuda_text_arduito_1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/boton_oscuro"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="23dp"
            android:text="@string/version_1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/boton_oscuro"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45dp"
            android:src="@drawable/a2_rojo" />

</RelativeLayout>